// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest Snapshot testing suite Matches CourseAssignmentPage Snapshot 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div>
    <label>
       Enter the course id:
      <input
        onChange={[Function]}
        type="text"
      />
    </label>
    <button
      onClick={[Function]}
    >
      Search Course
    </button>
  </div>
  <h1
    style={
      Object {
        "borderBottom": "1px solid black",
        "display": "inline-block",
      }
    }
  >
    Assignments (From Perusall):
  </h1>
  <label>
    No assignments to display
  </label>
</div>
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 1`] = `
<div>
  <label>
     Enter the course id:
    <input
      onChange={[Function]}
      placeholder="Course Id Here"
      type="text"
    />
  </label>
  <button
    onClick={[Function]}
  >
    Search Course
  </button>
  <h1>
    Perusall API Course Return:
  </h1>
  <h2>
    Course Name: 
  </h2>
  client/src/views/CourseDataPage.jsx
  <li>
    ID: 
  </li>
  <li>
    No instructor IDs available
  </li>
  <li>
    No student IDs available
  </li>
</div>
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 2`] = `
<div>
  <label>
    Loading data
  </label>
</div>
`;

exports[`Jest Snapshot testing suite Matches InstitutionRosterPage Snapshot 1`] = `
<div>
  <h1>
    Perusall API User Return:
  </h1>
</div>
`;
